advanced/k8s/options_example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: options-example
  labels:
    app: hello
spec:
  replicas: 10
  revisionHistoryLimit: 5 #Default 10
  strategy: 
    type: RollingUpdate #Can be "Recreate" or "RollingUpdate". Default is RollingUpdate.
    rollingUpdate:
      maxSurge: 3 #Default 25%
      maxUnavailable: 0 # Default 25%
  selector: 
    matchLabels:
      app: options-example
  template:
    metadata:
      labels:
        app: options-example
    spec:
      securityContext:
        runAsNonRoot: true # can override in container context
        runAsUser: 1000    #
        runAsGroup: 1000   # 
        fsGroup: 1000      #
      containers:
      - name: container
        imagePullPolicy: Always #Always, Never, IfNotPresent. Defaults to Always if :latest tag is specified, or IfNotPresent otherwise
        lifecycle:         #Like Probes
          postStart:
            httpGet:
              host: 127.0.0.1
              port: 8080
              path: /
              httpHeaders:
              - name: Content-Type
                value: application/json
          preStop: 
            exec:
              command: ["echo", "'Pod startet'"]
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            add:  ["NET_RAW"] 
            drop: ["NET_ADMIN"]
          privileged: false
          readOnlyRootFilesystem: true
          #runAsGroup, runAsUser, runAsNonRoot also possible
        image: gcr.io/kuar-demo/kuard-amd64:1
        resources:
          requests:
            memory: "200Mi"
            cpu: "100m"
          limits:
            memory: "300Mi"
            cpu: "500m"
        ports:
        - name: http
          containerPort: 8080
        - name: https
           containerPort: 8443
        readinessProbe:
          httpGet:
            path: /
            port: http
            httpHeaders:
            - name: X-Custom-Header
              value: Awesome
          initialDelaySeconds: 3
          periodSeconds: 3
        livenessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 15
          periodSeconds: 20
